# EpicShelter

./: .gitignore  README.md  __init__.py  __token__  google.py  google_drive.py  google_types.data  main.py  setup.py  test.py  utils.py
amazon_s3/: amazon_s3.py  amazon_utils.py  test_amazon.py
amazon_s3/utils/: processing_class.py
epicshelter/: exp_walk.py  google_types.data  main.py  mp_test.py  requirements.txt  test_requests.py
epicshelter/amazon_s3/: amazon_s3.py
epicshelter/amazon_s3/utils/: amazon_utils.py
epicshelter/azure_blob_storage/: azure_blob_storage.py  azure_utils.py  processing_class.py  test.py
epicshelter/google_drive/: google_drive.py
epicshelter/google_drive/utils/: google_utils.py
epicshelter/shelter/: shelter.py  test_sheler.py
epicshelter_tested/: commands.sh  setup.cfg  setup.py
epicshelter_tested/aws_s3/: aws_s3.py
epicshelter_tested/shelter/: shelter.py
epicshelter_tested/tests/: aws_utils.py  test_aws_s3.py  test_google.py  test_shelter.py
google_drive/: google_drive.py  google_utils.py
google_drive/utils/: google_utils.py
