[metadata]
# replace with your username:
name = epicshelter
version = 0.0.1
url = https://github.com/mihai011/EpicShelter
author = Mihailescu Mihai
author_email = mihaimihai011@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package from setup.cfg
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6